--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^6.1"
+    },    
+    "scripts": {
+        "test": "vendor/bin/phpunit test/ --testdox"
     }
 }
