--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
         "phpunit/phpunit": "^6.1"
     },    
     "scripts": {
-        "test": "vendor/bin/phpunit test/ --testdox"
+        "test": "vendor/bin/phpunit test/ --bootstrap soma.php --testdox"
     }
 }
